--- a/services.html
+++ b/services.html
@@ -19,12 +19,12 @@
             <li><a href="services.html">Services</a></li>
         </ul>
     </nav>
-    <div class="container">
+    <!-- <div class="container">
         <img src="images/nature.jpg" alt="nature" style="width:100%;">
         <!-- <div class="bottom-left"><bottom left</div>
        <div class="top-left">top left</div>
        <div class="centered">Centered</div> -->
-    </div>
+    </div> -->
     <h2>SKY TECH HUB </h2>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos expli
         cabo voluptatibus error nobis, corrupti adipisci sed aspernatur dicta, fuga lau
