--- a/contact.html
+++ b/contact.html
@@ -12,16 +12,17 @@
 /* CONTACT STYLES */
 
 #contact-form label {
-   background:rgb(97, 99, 99);
+   background: black;
    padding: 20px;
-   color: rgb(181, 208, 243);
+   color:white;
    margin-bottom: 10px;
    margin-left: 80px;
    display:inline-block;
 }
 #contact-form input{
 padding: 20px;
-background: cadetblue;
+background: white;
+color: rgb(11, 12, 12);
 margin-left: 80px;
 margin-bottom: 10px;
 }      
@@ -32,12 +33,15 @@ padding: 10px;
 border: 1px rgb(221, 221, 221);
 }  
 #contact-form textarea{
-margin-left: 70px; 
+margin-left: 70px;
+font-size: 15px; 
 width: 500px
 }
 #contact-form select{
 margin-left: 80px;
-background: teal;
+background: black;
+color: white;
+font-size: 15px;
 }  
 #contact-form button{
 padding: 20px;
@@ -62,7 +66,7 @@ margin-left: 70px;
         </ul>
         </div>
     </nav>
-    <section id="contact-form" class="py-3">
+    <section id="contact-form" class="py-6">
         <div class="container">
             <h2 class="l-heading"><span
                 class="text-primary">contact</span> us </h2>
@@ -97,29 +101,24 @@ margin-left: 70px;
                        <br><br>
                        <textarea name="message" placeholder="Type something here...."></textarea>
                        <br><br>
-                       <button type="Submit">Submit data</button>
+                       <button type="submit data">submit</button>
                     </form>
                 <!-- </div> -->
         </div>
     </section>
 
         <div class="container">
-            <div class="row" style="color: hotpink; ">
-                <div class="col-1">
+            <div class="row" style="color: black; ">
                     <div class="box">
                         <i class="fas fa-location fa-3x"></i>
                         <h3>Location</h3>
                         <p>Ndalani town,5km from mwingi town</p>
-                    </div>
                 </div>
-                <div class="col-2">
                     <div class="box ">
                         <i class="fas fa-phone fa-3x"></i>
                         <h4>Phone number</h4>
                         <P>0743396280-Hotline</P>
                     </div>
-                </div>
-                <div class="joshi">
                     <div class="box">
                         <i class="fas fa-envelope"></i>
                         <h5>Email address</h5> 
@@ -128,7 +127,6 @@ margin-left: 70px;
                     </div>
                 </div>
             </div>
-        </div>
     <div id="footer">
         <p>Sky Tech Hub &copy;2019, All Rights Reserved</p>
     </div>
