--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                         <li><a href="services.html">Services</a></li>
                         <li><a href="products.html">Product</a></li>
                         <li><a href="events.html">Events</a></li>
+                        <input type="text" placeholder="Search...">
                     </ul>
             </div>
             </nav>
@@ -55,9 +56,8 @@
                 </div>
         </div>
     </section>
-<div class="footer">
-    <p>Sky Tech &copy;2019, All Rights Reserved</p>
-    </footer>
-    </div>
+        <div class="footer">
+            <p>Sky Tech &copy;2019, All Rights Reserved</p>
+        </footer>
     </body> 
 </html>
