--- a/contact.html
+++ b/contact.html
@@ -62,9 +62,10 @@ margin-left: 70px;
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About  </a></li>
             <li><a class="current"
-             href="contact.html">Contact </a></li>
-        </ul>
+                href="contact.html">Contact </a></li>
+            </ul>
         </div>
+               
     </nav>
     <section id="contact-form" class="py-6">
         <div class="container">
@@ -73,8 +74,8 @@ margin-left: 70px;
                 <p>Please fill out the form below to contact us</p>
                 <!-- <div id="container"> -->
                     <form>
-                       <label>First name</label><br><br>
-                       <input type="text" name="name" placeholder="Enter your first name">
+                        <label>First name</label><br><br>
+                        <input type="text" name="name" placeholder="Enter your first name">
                        <br><br>
                         <label>Last name</label><br><br>
                         <input type="text" name="name" placeholder="Enter your last name">
@@ -98,14 +99,11 @@ margin-left: 70px;
                        <input type="text" name="name" placeholder="Type of products that you need">
                        <br><br>
                        <label>Message</label>
+                       button
                        <br><br>
                        <textarea name="message" placeholder="Type something here...."></textarea>
                        <br><br>
-                       <button type="submit data">submit</button>
-                    </form>
-                <!-- </div> -->
-        </div>
-    </section>
+                       <button text="submit">submit data</button>
 
         <div class="container">
             <div class="row" style="color: black; ">
@@ -122,8 +120,7 @@ margin-left: 70px;
                     <div class="box">
                         <i class="fas fa-envelope"></i>
                         <h5>Email address</h5> 
-            \ 
-                        <p>Skytech@outlook.com</p> 
+                         <p>Skytech@outlook.com</p> 
                     </div>
                 </div>
             </div>
